--- a/src/styles/weekDaysForecast.module.css
+++ b/src/styles/weekDaysForecast.module.css
@@ -16,7 +16,7 @@
   border-radius: 10px;
   font-size: 1.3rem;
   font-weight: normal;
-  word-spacing: 1px;
+
   display: flex;
   align-items: center;
   justify-content: space-between;
